# backend/docs/swagger.json
@@ -527,6 +527,14 @@
                 },
                 "updated_at": {
                     "type": "string"
+                },
+                "work_schedule": {
+                    "type": "string",
+                    "enum": [
+                        "2/2",
+                        "5/2"
+                    ],
+                    "example": "2/2"
                 }
             }
         },
@@ -573,6 +581,14 @@
                 "transport": {
                     "type": "string",
                     "example": "car"
+                },
+                "work_schedule": {
+                    "type": "string",
+                    "enum": [
+                        "2/2",
+                        "5/2"
+                    ],
+                    "example": "2/2"
                 }
             }
         },
