# backend/internal/brigades/dto.go
@@ -9,6 +9,7 @@ type CreateDTO struct {
 	StartLongitude float64         `json:"start_longitude" example:"37.7488"`
 	ShiftStart     string          `json:"shift_start" example:"10:00"`
 	ShiftEnd       string          `json:"shift_end" example:"22:00"`
+	WorkSchedule   string          `json:"work_schedule,omitempty" enums:"2/2,5/2" example:"2/2"`
 	Skills         []string        `json:"skills" example:"connection,local"`
 	Transport      string          `json:"transport" example:"car"`
 	Metadata       json.RawMessage `json:"metadata,omitempty" swaggertype:"object"`
