# backend/internal/brigades/model.go
@@ -15,6 +15,7 @@ type Brigade struct {
 	StartLongitude float64         `json:"start_longitude"`
 	ShiftStart     string          `json:"shift_start" example:"10:00"`
 	ShiftEnd       string          `json:"shift_end" example:"22:00"`
+	WorkSchedule   string          `json:"work_schedule" enums:"2/2,5/2" example:"2/2"`
 	Skills         []string        `json:"skills"`
 	Transport      string          `json:"transport" enums:"car,walk,bicycle,public_transit"`
 	Status         string          `json:"status" enums:"available,unavailable"`
